second part completed

--- a/index.html
+++ b/index.html
@@ -74,10 +74,29 @@
             </div>
             </div>
             <div class="parallax-window" data-parallax="scroll" data-image-src="#fff" data-position="-10px 0%" data-bleed="10">
-                <div class="dis">
-                    sadsadasdsadsad
+                <div class="row abt">
+                    <div class="col-lg-7 col-xs-7 abtl">
+                      <div class="dis">
+                          <h1 class="about">Aren't surprise wishes <span>awesome?</span></h1>
+                          <p>
+                              <span class="hus">Hushush </span>is the easy to create personalised greetings and images for friends and family
+                              which are displayed on screen prior to the biggest movies, at your local cinemas.<br><br>
+                              Hushush uses a simple to use and fully automated platform to celebrate those special events - from birth -
+                               days and proposal to anniversaries.
+                          </p>
+                      </div>
+                    </div>
+                    <div class="col-sm-5 col-lg-5 abtr">
+                        <div class="scr">
+                            <img src="images/mobile.png" class="img-responsive">
+                        </div>
+
+                    </div>
                 </div>
             </div>
+            <!--<div class="parallax-window" data-parallax="scroll" data-image-src="images/header_bg.jpg" data-position="-10px 0%">
+               <h1>parallax</h1>
+           </div>-->
 
             <!--<div class="parallax-window" data-parallax="scroll" data-image-src="images/v.jpeg" data-position="-10px 0%">
                 <h1>parallax</h1>
