third part completed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             </div>
             </div>
-            <div class="parallax-window" data-parallax="scroll" data-image-src="#fff" data-position="-10px 0%" data-bleed="10">
+            <div class="parallax-window parallax2" data-parallax="scroll" data-image-src="images/white.jpg" data-position="-10px 0%" data-bleed="10">
                 <div class="row abt">
                     <div class="col-lg-7 col-xs-7 abtl">
                       <div class="dis">
@@ -94,7 +94,23 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="parallax-window" data-parallax="scroll" data-image-src="images/header_bg.jpg" data-position="-10px 0%">
+            <div class="parallax-window parallax3" data-parallax="scroll" data-image-src="images/wh.jpeg" data-position="-10px 0%">
+               <div class="how">
+                   <h1>Here's how it works</h1>
+                   <p>Our fully inclusive 'Surprise Wish' package can be accessed via the app and online and allows you to</p>
+                   <img class="img-responsive icon" src="images/ticket_icon.png">
+                   <p>Select two cinema tickets for a<br> screening of your choice</p>
+                   <img class="img-responsive icon" src="images/picture_icon.png">
+                   <p>Quickly upload images and a personalised<br> greeting for display on screen</p>
+                   <img class="img-responsive icon" src="images/gift_icon.png">
+                   <p>Book complementaty desserts, a greeting card<br> and goody bag to be served during the screening</p>
+                   <h2>Wish to know more?</h2>
+                   <div class="watch" style="margin:auto">
+                       <img class="img-responsive" src="images/play_black.png"><p>Watch the Video</p>
+                   </div>
+               </div>
+           </div>
+            <!--<div class="parallax-window parallax4" data-parallax="scroll" data-image-src="images/header_bg.jpg" data-position="-10px 0%">
                <h1>parallax</h1>
            </div>-->
 
