footer designing not completed

--- a/index.html
+++ b/index.html
@@ -110,9 +110,33 @@
                    </div>
                </div>
            </div>
-            <!--<div class="parallax-window parallax4" data-parallax="scroll" data-image-src="images/header_bg.jpg" data-position="-10px 0%">
-               <h1>parallax</h1>
-           </div>-->
+            <div class="parallax-window parallax4" data-parallax="scroll" data-image-src="images/white.jpg" data-position="-10px 0%">
+               <div class="row">
+                   <div class="col-sm-12 col-lg-12">
+                   <div class="store2 text-center">
+                       <p>Make every occasion one to remember by<br> dowloading the <span>Hushush</span>
+                           app today</p>
+                       <div class="store">
+
+                           <div class=""><img src="images/google.png" class="img-responsive" style="float:left;"></div>
+                           <div class=""><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
+                       </div>
+                   </div>
+                   </div>
+               </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-12 foo">
+                        <div class="footer">
+                            <p>We also offer special corporate entertainment and gift packages for business client.
+                                Hushush will also soon be expanded to include screen coverage at sports events,restaurants,shopping malls and flights.
+
+                            </p>
+                            <p>To learn abuut Hushush, please <span>contact us</span></p>
+                        </div>
+                    </div>
+                </div>
+           </div>
+
 
             <!--<div class="parallax-window" data-parallax="scroll" data-image-src="images/v.jpeg" data-position="-10px 0%">
                 <h1>parallax</h1>
@@ -127,10 +151,12 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
+<script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 <!-- drawer.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
+
 <script src="js/script.js"></script>
-<script src="js/parallax/parallax.js"></script>
+<!--<script src="js/parallax/parallax.js"></script>-->
 <script>
 </script>
 
