--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                                 </button>
                                 <nav class="drawer-nav" role="navigation">
                                     <ul class="drawer-menu">
-                                        <li><a class="drawer-menu-item" href="#">ABOUT</a></li>
-                                        <li><a class="drawer-menu-item" href="#">HOW IT WORKS</a></li>
+                                        <li><a class="drawer-menu-item" href="#about">ABOUT</a></li>
+                                        <li><a class="drawer-menu-item" href="#how">HOW IT WORKS</a></li>
                                         <li><a class="drawer-menu-item" href="#">FEATURES</a></li>
                                     </ul>
                                 </nav>
@@ -47,8 +47,8 @@
                             <!--navigation menu-->
                             <div>
                                 <ul class="inline nav-menu">
-                                    <li class="list-inline-item"><a href="#">ABOUT</a> </li>
-                                    <li class="list-inline-item"><a href="#">HOW IT WORKS</a> </li>
+                                    <li class="list-inline-item"><a href="#about">ABOUT</a> </li>
+                                    <li class="list-inline-item"><a href="#how">HOW IT WORKS</a> </li>
                                     <li class="list-inline-item"><a href="#">FEATURES</a> </li>
                                 </ul>
                             </div>
@@ -56,7 +56,7 @@
                     </div>
 
                 </div>
-                <div class="row">
+                <div class="row" id="about">
                     <div class="col-xs-12 col-lg-12">
                         <div class="intro">
                             <h1><span style="color: #7E1D7E  ">Surprise</span> your loved ones!</h1>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="parallax-window parallax3" data-parallax="scroll" data-image-src="images/wh.jpeg" data-position="-10px 0%">
-               <div class="how">
+               <div class="how" id="how">
                    <h1>Here's how it works</h1>
                    <p>Our fully inclusive 'Surprise Wish' package can be accessed via the app and online and allows you to</p>
                    <img class="img-responsive icon" src="images/ticket_icon.png">
@@ -108,10 +108,13 @@
                    <div class="watch" style="margin:auto">
                        <img class="img-responsive" src="images/play_black.png"><p>Watch the Video</p>
                    </div>
+                   <div style="height: 20px">
+
+                   </div>
                </div>
            </div>
             <div class="parallax-window parallax4" data-parallax="scroll" data-image-src="images/white.jpg" data-position="-10px 0%">
-               <div class="row">
+               <div class="row s2">
                    <div class="col-sm-12 col-lg-12">
                    <div class="store2 text-center">
                        <p>Make every occasion one to remember by<br> dowloading the <span>Hushush</span>
@@ -124,14 +127,15 @@
                    </div>
                    </div>
                </div>
-                <div class="row">
+                <div class="row s3">
                     <div class="col-sm-12 col-lg-12 foo">
-                        <div class="footer">
+                        <div class="footer text-center">
                             <p>We also offer special corporate entertainment and gift packages for business client.
                                 Hushush will also soon be expanded to include screen coverage at sports events,restaurants,shopping malls and flights.
 
                             </p>
-                            <p>To learn abuut Hushush, please <span>contact us</span></p>
+                            <p class="con">To learn about Hushush, please <span>contact us</span></p>
+                            <p class="copy" style="color: #8A8D91;margin-top: -16px;">&copy 2018 Hushush. All rights reserved</p>
                         </div>
                     </div>
                 </div>
