drawer close problem fixed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <!--navigation menu-->
                             <div>
                                 <ul class="inline nav-menu">
-                                    <li class="list-inline-item"><a href="#about">ABOUT</a> </li>
+                                    <li class="list-inline-item a"><a href="#about">ABOUT</a> </li>
                                     <li class="list-inline-item"><a href="#how">HOW IT WORKS</a> </li>
                                     <li class="list-inline-item"><a href="#">FEATURES</a> </li>
                                 </ul>
@@ -154,10 +154,12 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
 <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 <!-- drawer.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
+
 
 <script src="js/script.js"></script>
 <!--<script src="js/parallax/parallax.js"></script>-->
