lines added for flow

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                                         <li><a class="drawer-menu-item" href="#about">ABOUT</a></li>
                                         <li><a class="drawer-menu-item" href="#how">HOW IT WORKS</a></li>
                                         <li><a class="drawer-menu-item" href="#">FEATURES</a></li>
+                                        <li><a class="drawer-menu-item" href="#">MEDIA KIT</a></li>
                                     </ul>
                                 </nav>
                             </header>
@@ -51,6 +52,7 @@
                                     <li class="list-inline-item a"><a href="#about">ABOUT</a> </li>
                                     <li class="list-inline-item"><a href="#how">HOW IT WORKS</a> </li>
                                     <li class="list-inline-item"><a href="#">FEATURES</a> </li>
+                                    <li class="list-inline-item"><a href="#">MEDIA KIT</a> </li>
                                 </ul>
                             </div>
                         </div>
@@ -112,11 +114,18 @@
                    <h1>Here's how it works</h1>
                    <p>Our fully inclusive 'Surprise Wish' package can be accessed via the app and online and allows you to</p>
                    <img class="img-responsive icon" src="images/ticket_icon.png">
+
+                   <div>
+                       <img src="images/line_r.png" class="img-responsive lineL">
+                   </div>
+                   <div>
+                       <img src="images/line_l.png" class="img-responsive lineR">
+                   </div>
                    <p>Select two cinema tickets for a<br> screening of your choice</p>
                    <img class="img-responsive icon" src="images/picture_icon.png">
                    <p>Quickly upload images and a personalised<br> greeting for display on screen</p>
                    <img class="img-responsive icon" src="images/gift_icon.png">
-                   <p>Book complementaty desserts, a greeting card<br> and goody bag to be served during the screening</p>
+                   <p>Book complementaty desserts, a greeting card/goody bag to be served during the screening</p>
                    <h2>Wish to know more?</h2>
                    <div class="watch" id="play2" style="margin:auto">
                        <img class="img-responsive" src="images/play_black.png"><p>Watch the Video</p>
@@ -156,7 +165,10 @@
 
                             </p>
                             <p class="con">To learn about Hushush, please <span>contact us</span></p>
-                            <p class="copy" style="color: #8A8D91;margin-top: -16px;">&copy 2018 Hushush. All rights reserved</p>
+                            <div class="conDet">
+                            <p>Email:hush@hushush.co<br>Mob:+917034444577</p>
+                            </div>
+                            <p class="copy" style="color: #8A8D91;margin-top: -35px;">&copy 2018 Hushush. All rights reserved</p>
                         </div>
                     </div>
                 </div>
