video close button fixed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                         <div id="couple" class="play">
-                            <button type="button" id="close1" class="close">
+                            <button type="button" id="close1" class="close close2 close1" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <video width="400" controls>
@@ -135,7 +135,11 @@
                    </div>
                </div>
                 <div id="family" class="play">
-                    <button type="button" id="close2" class="close" data-dismiss="modal" aria-label="Close">
+                    <!--<button type="button" id="close2" class="close">
+                        <span>&times;</span>
+                    </button>-->
+
+                    <button type="button" id="clo" class="close close2" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <video width="400" controls>
