converted videos added

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                                 </button>
                                 <nav class="drawer-nav" role="navigation">
                                     <ul class="drawer-menu">
-                                        <li><a class="drawer-menu-item" href="#about">ABOUT</a></li>
+                                        <li><a class="drawer-menu-item" href="#abt">ABOUT</a></li>
                                         <li><a class="drawer-menu-item" href="#how">HOW IT WORKS</a></li>
-                                        <li><a class="drawer-menu-item" href="#">FEATURES</a></li>
+                                        <li><a class="drawer-menu-item" href="#">PRODUCT VIDEO</a></li>
                                         <li><a class="drawer-menu-item" href="#">MEDIA KIT</a></li>
                                     </ul>
                                 </nav>
@@ -49,9 +49,9 @@
                             <!--navigation menu-->
                             <div>
                                 <ul class="inline nav-menu">
-                                    <li class="list-inline-item a"><a href="#about">ABOUT</a> </li>
+                                    <li class="list-inline-item a"><a href="#abt">ABOUT</a> </li>
                                     <li class="list-inline-item"><a href="#how">HOW IT WORKS</a> </li>
-                                    <li class="list-inline-item"><a href="#">FEATURES</a> </li>
+                                    <li class="list-inline-item"><a href="#">PRODUCT VIDEO</a> </li>
                                     <li class="list-inline-item"><a href="#">MEDIA KIT</a> </li>
                                 </ul>
                             </div>
@@ -80,7 +80,7 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <video width="400" controls>
-                                <source src="videos/couple.mp4" type="video/mp4">
+                                <source src="videos/couple2.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
             </div>
             </div>
             <div class="parallax-window parallax2" data-parallax="scroll" data-image-src="images/white.jpg" data-position="-10px 0%" data-bleed="10">
-                <div class="row abt">
+                <div class="row abt" id="abt">
                     <div class="col-lg-7 col-xs-7 abtl">
                       <div class="dis">
                           <h1 class="about">Aren't surprise wishes <span>awesome?</span></h1>
@@ -143,7 +143,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <video width="400" controls>
-                        <source src="videos/family.mp4" type="video/mp4">
+                        <source src="videos/family2.mp4" type="video/mp4">
                     </video>
                 </div>
            </div>
