--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                    </div>
                    <p>Select two cinema tickets for a<br> screening of your choice</p>
                    <img class="img-responsive icon" src="images/picture_icon.png">
-                   <p>Quickly upload images and a personalised<br> greeting for display on screen</p>
+                   <p>Quickly upload images and a personalised<br> surprise wish on big cinema screen</p>
                    <img class="img-responsive icon" src="images/gift_icon.png">
                    <p>Book complementaty desserts, a greeting card/goody bag to be served during the screening</p>
                    <h2>Wish to know more?</h2>
