video problem solved in chrome

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Hushush</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -75,12 +76,13 @@
                                 <div class=""><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
                             </div>
                         </div>
+
                         <div id="couple" class="play">
                             <button type="button" id="close1" class="close close2 close1" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <video width="400" controls>
-                                <source src="videos/couple2.mp4" type="video/mp4">
+                                <source src="videos/couple3.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -142,16 +144,18 @@
                     <button type="button" id="clo" class="close close2" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
+                    <div>
                     <video width="400" controls>
-                        <source src="videos/family2.mp4" type="video/mp4">
+                        <source src="videos/couple3.mp4" type="video/mp4">
                     </video>
+                    </div>
                 </div>
            </div>
             <div class="parallax-window parallax4" data-parallax="scroll" data-image-src="images/white.jpg" data-position="-10px 0%">
                <div class="row s2">
                    <div class="col-sm-12 col-lg-12">
                    <div class="store2 text-center">
-                       <p>Make every occasion one to remember by<br> dowloading the <span>Hushush</span>
+                       <p>Make every occasion one to remember by<br> downloading the <span>Hushush</span>
                            app today</p>
                        <div class="store">
 
