video close button alignment adjusted

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </button>
                     <div>
                     <video width="400" controls>
-                        <source src="videos/couple3.mp4" type="video/mp4">
+                        <source src="videos/family3.mp4" type="video/mp4">
                     </video>
                     </div>
                 </div>
