video 2 styles added

--- a/index.html
+++ b/index.html
@@ -147,11 +147,9 @@
                     <button type="button" id="clo" class="close close2" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <div>
-                    <video width="400" controls>
-                        <source src="videos/family3.mp4" type="video/mp4">
-                    </video>
-                    </div>
+                        <video video id="my-video2" class="video-js" controls preload="auto" width="640" data-setup="{}">
+                            <source src="videos/family3.mp4" type="video/mp4">
+                        </video>
                 </div>
            </div>
             <div class="parallax-window parallax4" data-parallax="scroll" data-image-src="images/white.jpg" data-position="-10px 0%">
