video close button rearranged

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
 
                         <div id="couple" class="play">
-                            <button type="button" id="close1" class="close close2 close1" aria-label="Close">
+                            <button type="button" id="close1" class="close close1" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <video video id="my-video" class="video-js" controls preload="auto" width="640" data-setup="{}">
