animation effects added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://vjs.zencdn.net/6.6.3/video-js.css" rel="stylesheet">
     <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
 
 
 
@@ -25,7 +27,7 @@
                     <div class="row header">
                         <div class="col-xs-6 col-md-6" >
                             <div>
-                            <img class="img-responsive logo" src="images/logo.png">
+                            <img class="img-responsive logo animated pulse infinite" src="images/logo.png">
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-6">
@@ -67,16 +69,16 @@
                 <div class="row" id="about">
                     <div class="col-xs-12 col-lg-12">
                         <div class="intro">
-                            <h1><span style="color: #7E1D7E  ">Surprise</span> your loved ones!</h1>
-                            <p> Download the <span style="font-weight: bold">Hushush</span> app today to help create memories that your loved ones will treassure</p>
-                            <div class="watch" id="play1" data-toggle="modal" data-target="#video_modal1">
+                            <h1 class="animated flip"><span style="color: #7E1D7E  ">Surprise</span> your loved ones!</h1>
+                            <p class="animated rollIn"> Download the <span style="font-weight: bold">Hushush</span> app today to help create memories that your loved ones will treassure</p>
+                            <div class="watch animated jello infinite" id="play1" data-toggle="modal" data-target="#video_modal1">
                                 <img class="img-responsive" src="images/play.png"><p>Watch the Video</p>
 
 
                             </div>
                             <div class="store">
-                                <div class=""><img src="images/google.png" class="img-responsive" style="float:left;"></div>
-                                <div class=""><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
+                                <div class="animated bounceInLeft"><img src="images/google.png" class="img-responsive" style="float:left;"></div>
+                                <div class="animated bounceInRight"><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
                             </div>
                         </div>
 
@@ -98,7 +100,7 @@
                     <div class="col-lg-7 col-xs-7 abtl">
                       <div class="dis">
                           <h1 class="about">Aren't surprise wishes <span>awesome?</span></h1>
-                          <p>
+                          <p class="animated lightSpeedIn">
                               <span class="hus">Hushush </span>is the easy to create personalised greetings and images for friends and family
                               which are displayed on screen prior to the biggest movies, at your local cinemas.<br><br>
                               Hushush uses a simple to use and fully automated platform to celebrate those special events - from birth -
@@ -160,8 +162,8 @@
                            app today</p>
                        <div class="store">
 
-                           <div class=""><img src="images/google.png" class="img-responsive" style="float:left;"></div>
-                           <div class=""><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
+                           <div class="str2"><img src="images/google.png" class="img-responsive" style="float:left;"></div>
+                           <div class="str2"><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
                        </div>
                    </div>
                    </div>
