animation timing arranged

--- a/index.html
+++ b/index.html
@@ -69,16 +69,17 @@
                 <div class="row" id="about">
                     <div class="col-xs-12 col-lg-12">
                         <div class="intro">
-                            <h1 class="animated flip"><span style="color: #7E1D7E  ">Surprise</span> your loved ones!</h1>
-                            <p class="animated rollIn"> Download the <span style="font-weight: bold">Hushush</span> app today to help create memories that your loved ones will treassure</p>
+                            <h1 class="mainhead" style="animation-duration: 1s"><span style="color: #7E1D7E  ">Surprise</span> your loved ones!</h1>
+                            <p class="mainp" style="animation-delay:.3s"> Download the <span style="font-weight: bold">Hushush</span> app today to help create memories that your loved ones will treassure</p>
                             <div class="watch animated jello infinite" id="play1" data-toggle="modal" data-target="#video_modal1">
                                 <img class="img-responsive" src="images/play.png"><p>Watch the Video</p>
 
 
                             </div>
                             <div class="store">
-                                <div class="animated bounceInLeft"><img src="images/google.png" class="img-responsive" style="float:left;"></div>
-                                <div class="animated bounceInRight"><img src="images/app_store.png" class="img-responsive" style="float:right;"></div>
+                                <div><img src="images/google.png" style="float:left;animation-delay: .6s" class="img-responsive strImg1"></div>
+                                <div>
+                                    <img src="images/app_store.png" style="float:right;animation-delay: .6s" class="img-responsive strImg2"></div>
                             </div>
                         </div>
 
