--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="col-xs-12 col-lg-12">
                         <div class="intro">
                             <h1 class="mainhead" style="animation-duration: 1s"><span style="color: #7E1D7E  ">Surprise</span> your loved ones!</h1>
-                            <p class="mainp" style="animation-delay:.3s"> Download the <span style="font-weight: bold">Hushush</span> app today to help create memories that your loved ones will treassure</p>
+                            <p class="mainp" style="animation-delay:.3s"> Download the <span style="font-weight: bold">Hushush</span> app today to help create memories that your loved ones will treasure</p>
                             <div class="watch animated jello infinite" id="play1" data-toggle="modal" data-target="#video_modal1">
                                 <img class="img-responsive" src="images/play.png"><p>Watch the Video</p>
 
@@ -102,7 +102,7 @@
                       <div class="dis">
                           <h1 class="about">Aren't surprise wishes <span>awesome?</span></h1>
                           <p class="animated lightSpeedIn">
-                              <span class="hus">Hushush </span>is the easy to create personalised greetings and images for friends and family
+                              <span class="hus">Hushush </span>is the easy way to create personalised greetings and images for friends and family
                               which are displayed on screen prior to the biggest movies, at your local cinemas.<br><br>
                               Hushush uses a simple to use and fully automated platform to celebrate those special events - from birth -
                                days and proposal to anniversaries.
@@ -133,7 +133,7 @@
                    <img class="img-responsive icon" src="images/picture_icon.png">
                    <p>Quickly upload images and a personalised<br> surprise wish on big cinema screen</p>
                    <img class="img-responsive icon" src="images/gift_icon.png">
-                   <p>Book complementaty desserts, a greeting card/goody bag to be served during the screening</p>
+                   <p>Book complementary desserts, a greeting card/goody bag to be served during the screening</p>
                    <h2>Wish to know more?</h2>
                    <div class="watch" id="play2" style="margin:auto">
                        <img class="img-responsive" src="images/play_black.png"><p>Watch the Video</p>
